# LC3-VM

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  laser-comp
examples/: add.asm  and.asm  basic.asm  ld.asm  multiple.asm  not.asm  traps.asm
src/: main.rs  virtual_machine.rs
src/virtual_machine/: cpu.rs  opcodes.rs
